--- a/package.json
+++ b/package.json
@@ -4,17 +4,22 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "firebase": "^7.5.0",
     "flv.js": "^1.5.0",
     "lodash": "^4.17.15",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-redux": "^7.1.1",
+    "react-redux": "^5.1.1",
+    "react-redux-firebase": "^2.2.4",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.2",
     "redux": "^4.0.4",
+    "redux-auth-wrapper": "^2.1.0",
+    "redux-firestore": "^0.11.0",
     "redux-form": "^8.2.6",
     "redux-thunk": "^2.3.0",
-    "semantic-ui-react": "^0.88.1"
+    "semantic-ui-react": "^0.88.1",
+    "uuid": "^3.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
